--- a/views/transactions.ejs
+++ b/views/transactions.ejs
@@ -39,7 +39,7 @@
         const element = `
             <tr>
               <td>${data.id}</td>
-              <td>${data.name}</td>
+              <td class="text-left">${data.name}</td>
               <td>${data.bookedBy}</td>
               <td>${data.startDate.split('-').reverse().join('-')}</td>
               <td>${data.endDate.split('-').reverse().join('-')}</td>
