--- a/views/partials/main-layout-nav.ejs
+++ b/views/partials/main-layout-nav.ejs
@@ -156,6 +156,22 @@
             <div class="text-sm text-gray-900 dark:text-white">Transaksi Kamar</div>
           </a>
           <a
+            href="/credits"
+            class="block p-4 text-center rounded-lg hover:bg-gray-100 dark:hover:bg-gray-600 group credits_link">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              class="mx-auto mb-1 w-7 h-7 text-gray-400 group-hover:text-gray-500 dark:text-gray-400 dark:group-hover:text-gray-400"
+              viewBox="0 0 256 256">
+              <g fill="currentColor">
+                <path d="M232 96v96a8 8 0 0 1-8 8H32a8 8 0 0 1-8-8V96Z" opacity=".2" />
+                <path
+                  d="M224 48H32a16 16 0 0 0-16 16v128a16 16 0 0 0 16 16h192a16 16 0 0 0 16-16V64a16 16 0 0 0-16-16m0 16v24H32V64Zm0 128H32v-88h192zm-16-24a8 8 0 0 1-8 8h-32a8 8 0 0 1 0-16h32a8 8 0 0 1 8 8m-64 0a8 8 0 0 1-8 8h-16a8 8 0 0 1 0-16h16a8 8 0 0 1 8 8" />
+              </g>
+            </svg>
+
+            <div class="text-sm text-gray-900 dark:text-white">Laporan Kredit</div>
+          </a>
+          <a
             href="/cancelled"
             class="block p-4 text-center rounded-lg hover:bg-gray-100 dark:hover:bg-gray-600 group cancelled_link">
             <svg
